# projetcpp-2a33-smart-pharmacy

./: Atelier_Connexion.pro  Atelier_Connexion.pro.user.3f2465a  Atelier_Connexion.pro.user.53623c5  Atelier_Connexion.pro.user.57acf78  Atelier_Connexion.pro.user.fe834eb  CMakeLists.txt  Client.cpp  Client.h  GestionProduit.pro  GestionProduit.pro.user.0159c75  GestionProduit.pro.user.88c1a5c  GestionProduit.pro.user.b8cf756  GestionProduit.pro.user.b9ed1fc  Qrcode.cpp  arduino.cpp  arduino.h  arduinocommande.cpp  arduinocommande.h  camembertdialog.cpp  camembertdialog.h  commande.cpp  commande.h  connection.cpp  connection.h  fournisseur.cpp  fournisseur.h  fournisseurcrud.cpp  fournisseurcrud.h  gestioncommande.txt  image.qrc  interfournisseur.pro  main.cpp  maincommande.cpp  maincommande.h  maincommande.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  produit.cpp  produit.h  (+5 more)
